[project]
name = "project1-avo-m25-555"
version = "0.1.0"
description = "Текстовая игра Лабиринт сокровищ ДЗ1 М25-555 Анастасия Волконская"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.scripts]
project = "labyrinth_game.main:main" 