[project]
name = "project1-avo-m25-555"
version = "0.1.0"
description = "ДЗ1 Текстовая игра Лабиринт сокровищ Анастасия Волконская М25-555"
authors = [
    {name = "avo",email = "aavolkon@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
packages = [
     { include = "labyrinth_game" },
 ]

 [tool.poetry.scripts]
project = "labyrinth_game.main:main"